// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/LinearProgress Animation 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "minWidth": "300px",
    }
  }
>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      className="psds-linearprogress__fg"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Value: 
    0
  </div>
</div>
`;

exports[`Storyshots Components/LinearProgress Fills Container 1`] = `
<div
  style={
    Object {
      "background": "rgba(0, 100, 255, 0.5)",
      "padding": "8px",
      "width": "200px",
    }
  }
>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={66}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      aria-live="polite"
      className="psds-screenreader-only"
    >
      66%
    </div>
    <div
      className="psds-linearprogress__fg"
      style={
        Object {
          "width": "66%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/LinearProgress Min Width No Val 1`] = `
<div
  aria-busy="true"
  aria-label="download video"
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="psds-theme--dark psds-linearprogress__bg"
  role="progressbar"
>
  <div
    className="psds-linearprogress__fg"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`Storyshots Components/LinearProgress Values And Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
      "justifyItems": "left",
    }
  }
>
  <div>
    0
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      className="psds-linearprogress__fg"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div>
    25
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={25}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      aria-live="polite"
      className="psds-screenreader-only"
    >
      25%
    </div>
    <div
      className="psds-linearprogress__fg"
      style={
        Object {
          "width": "25%",
        }
      }
    />
  </div>
  <div>
    33
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      aria-live="polite"
      className="psds-screenreader-only"
    >
      33%
    </div>
    <div
      className="psds-linearprogress__fg"
      style={
        Object {
          "width": "33%",
        }
      }
    />
  </div>
  <div>
    50
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      aria-live="polite"
      className="psds-screenreader-only"
    >
      50%
    </div>
    <div
      className="psds-linearprogress__fg"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
  <div>
    66
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={66}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      aria-live="polite"
      className="psds-screenreader-only"
    >
      66%
    </div>
    <div
      className="psds-linearprogress__fg"
      style={
        Object {
          "width": "66%",
        }
      }
    />
  </div>
  <div>
    75
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      aria-live="polite"
      className="psds-screenreader-only"
    >
      75%
    </div>
    <div
      className="psds-linearprogress__fg"
      style={
        Object {
          "width": "75%",
        }
      }
    />
  </div>
  <div>
    100
  </div>
  <div
    aria-busy="false"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="psds-theme--dark psds-linearprogress__bg"
    role="progressbar"
  >
    <div
      aria-live="polite"
      className="psds-screenreader-only"
    >
      complete
    </div>
    <div
      className="psds-linearprogress__fg psds-linearprogress__fg--complete"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
